2002-06-09  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFTextRenderer.m:
	(-[IFTextRenderer drawCharacters:length:atPoint:withColor:]):
	Add code to handle drawing when are more than LOCAL_GLYPH_BUFFER_SIZE advances.
	I ran into this loading <http://jersey.apple.com/data/20020606-074404M0.html>.
	Also fix handling of advances for the obscure case where we hit a non-base character,
	slowPackGlyphsForCharacters fails, and substituteFontforCharacters returns nil.

2002-06-07  Darin Adler  <darin@apple.com>

	* Makefile.am: Use new shared "embed.am" file so we don't need four copies of
	the embedding rules for WebFoundation, JavaScriptCore, WebCore, and WebKit.

2002-06-07  Darin Adler  <darin@apple.com>

	* MIME.subproj/IFContentHandler.m: (-[IFContentHandler HTMLDocument]):
	Fix a warning that shows up with the new C++ compiler (not sure why it
	is not showing up with the old one).

2002-06-07  Chris Blumenberg  <cblu@apple.com>
	
	Allow plug-ins to make a NPP_*URLNotify request when
	the target is _self, _top, _parent or _current. This goes
	against the plug-in documentation, but mimics IE.
	Need for iTools.

	* Plugins.subproj/IFPluginView.mm:
	(-[IFPluginView loadURL:inTarget:withNotifyData:andHandleAttributes:]):

2002-06-07  Darin Adler  <darin@apple.com>

	* WebKit.pbproj/project.pbxproj: Don't use any warning flags for C that won't work
	for C++, because PFE uses the C warning flags on a C++ compile.

2002-06-07  Chris Blumenberg  <cblu@apple.com>

	Made IFWebController a class.
        Fixed all places where IFWebController was referred to as a protocol.
        Renamed IFBaseWebController files to IFWebController.
        IFWebController.h replaces IFWebBaseController.h.

	Added support for IEPL plug-ins.

	* Panels.subproj/IFStandardPanels.m:
	(-[IFStandardPanels _didStartLoadingURL:inController:]):
	(-[IFStandardPanels _didStopLoadingURL:inController:]):
	* Panels.subproj/IFStandardPanelsPrivate.h:
	* Plugins.subproj/IFNullPluginView.mm: